<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <SurfaceView
           android:id="@+id/surfaceView"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_weight="1"/>

       <com.google.android.material.tabs.TabLayout
           android:id="@+id/tabLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
           >

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tab_text_video" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/tab_text_photo" />
       </com.google.android.material.tabs.TabLayout>

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <Button
               android:id="@+id/buttonGrabText"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
               android:onClick="grabText"
               android:text="@string/button_detect_text"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toStartOf="@+id/imageButton2"
               app:layout_constraintStart_toEndOf="@+id/imageButton"
               android:textAllCaps="false"
               android:background="@drawable/corner_radius"
               android:layout_marginBottom="5dp"/>

           <androidx.appcompat.widget.AppCompatImageButton
               android:id="@+id/imageButton"
               android:layout_width="50dp"
               android:layout_height="35dp"
               android:layout_marginStart="20dp"
               android:layout_marginLeft="20dp"
               android:background="@drawable/corner_radius"
               android:onClick="viewDetectedText"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:srcCompat="@drawable/ic_menu" />

           <androidx.appcompat.widget.AppCompatImageButton
               android:id="@+id/imageButton2"
               android:layout_width="50dp"
               android:layout_height="35dp"
               android:background="@drawable/corner_radius"
               android:onClick="chooseImage"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:layout_marginEnd="15dp"
               app:srcCompat="@drawable/ic_image"
               android:layout_marginRight="15dp" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
           android:id="@+id/adViewMain"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true"
           ads:adSize="BANNER"
           ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

   </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="130dp"
        android:layout_height="89dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/colorPrimary"
        android:layout_gravity="center"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>