<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayTextActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewDisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewTextToSpeech"
                android:layout_width="38dp"
                android:layout_height="28dp"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toEndOf="@+id/textViewLanguageCode"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_volume_mute"
                android:onClick="speakText"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLanguageCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Eng"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextDisplay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTextToSpeech" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewTextToSpeech2"
                android:layout_width="38dp"
                android:layout_height="28dp"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toEndOf="@+id/textViewLanguageCode2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_volume_mute"
                android:onClick="speakTranslatedText"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLanguageCode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="Eng"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextDisplay2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTextToSpeech2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/buttonTranslate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/corner_radius"
                    android:onClick="translate"
                    android:text="@string/button_translate_to"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewLanguage"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="5dp"
                    android:layout_toEndOf="@+id/textViewSelectedTranslateLanguage"
                    android:layout_toRightOf="@+id/textViewSelectedTranslateLanguage"
                    tools:srcCompat="@drawable/englishflag" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewSelectedTranslateLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_toEndOf="@id/buttonTranslate"
                    android:layout_toRightOf="@id/buttonTranslate"
                    android:text="English"
                    android:textSize="18sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_add"
                    android:focusable="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="bottom|end"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55000000"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_view_share"
            android:textColor="#FFF"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="125dp"
            android:layout_marginEnd="125dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_share"
            android:focusable="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:layout_gravity="bottom|end"
            app:fabSize="mini"
            android:onClick="shareText"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_view_translate"
            android:textColor="#FFF"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="65dp"
            android:layout_marginRight="106dp"
            android:layout_marginEnd="106dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_translate"
            android:focusable="true"
            android:layout_marginBottom="55dp"
            android:layout_marginRight="60dp"
            android:layout_marginEnd="60dp"
            android:layout_gravity="bottom|end"
            app:fabSize="mini"
            android:onClick="openTranslate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/text_view_save"
            android:textColor="#FFF"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="100dp"
            android:layout_marginRight="55dp"
            android:layout_marginEnd="55dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/ic_save"
            android:focusable="true"
            android:layout_marginBottom="90dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="bottom|end"
            app:fabSize="mini"
            android:onClick="saveText"/>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarTranslate"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_may_take_a_while_please_wait"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/progressBarTranslate"
            android:gravity="center"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>